# 64-Districts-Game

./: .gitignore  README.md  main.py  pyproject.toml
assets/: 64_divisions.csv
