[tool.poetry]
name = "64 Districts Game"
version = "1.0.0"
description = "A simple guessing game of all the 64 districts of bangladesh created with python."
authors = ["Alimus Sifar <alimussifar@ymail.com>"]

[tool.poetry.dependencies]
python = "^3.8.0"
pandas = "^1.4.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"